test/users/bugzilla/bug794131/bug794131.good
bug794131.chpl:11: error: argument 'stuff': extern functions do not support formals of array type yet (see doc/technotes/README.extern for tips)
